adding local jquery
made necessary changes to html file

--- a/fade_HW.html
+++ b/fade_HW.html
@@ -3,7 +3,7 @@
 <head>
 	<title>FADE IN and FADE OUT</title>
 	<link rel="stylesheet" type="text/css" href="fade_HW.css">
-	<script type="text/javascript" src="../jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="fade_HW.js"></script>
 </head>
 <body>
